--- a/css/paginaPrincipal.css
+++ b/css/paginaPrincipal.css
@@ -3,11 +3,19 @@
     src: url("../fuentes/ShadowsIntoLight-Regular.ttf");
 }
 
+.clearfix {
+    float: none;
+    clear: both;
+}
+
 * {
     margin: 0px;
     padding: 0px;
     font-family: "Shawdows Into Ligth t", Arial, Helvetica, sans-serif;
 }
+
+
+/*Maquetacion del header*/
 
 header {
     width: 100%;
@@ -35,8 +43,82 @@ header>h1 {
     text-shadow: 0px 0px 5px rgb(44, 44, 44);
 }
 
+
+/*Fin del header*/
+
+
+/*Maquetacion del menu*/
+
+nav {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.904);
+}
+
+nav>ul {
+    width: 85%;
+    height: 50px;
+    margin: 0px auto;
+}
+
+nav>ul>li {
+    display: block;
+    width: 19%;
+    height: 100%;
+    float: left;
+    border-right: 1px solid #ccccccaf;
+}
+
+nav>ul>li:first-child {
+    border-left: 1px solid #ccccccaf;
+}
+
+nav>ul>li>a {
+    display: block;
+    background-color: rgba(56, 56, 56, 0.774);
+    width: 100%;
+    height: 100%;
+    line-height: 50px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    text-shadow: 1.5px 1.5px 3px rgba(255, 255, 255, 0.726);
+    transition: all 600ms;
+}
+
+nav>ul>li>a:hover {
+    background-color: rgba(251, 66, 66, 0.733);
+    box-shadow: 0px 0px 5px black inset;
+    text-decoration: underline;
+}
+
 @media (max-width: 414px) {
     header>h1 {
         font-size: 25px;
+    }
+    nav>ul {
+        width: 100%;
+        height: 40px;
+    }
+    nav>ul>li {
+        width: 24%;
+    }
+    nav>ul>li:first-child {
+        display: none;
+    }
+    nav>ul>li>a {
+        font-size: 14px;
+        line-height: 40px;
+    }
+    nav>ul>li:nth-child(2) {
+        border-left: 1px solid #ccccccaf;
+    }
+}
+
+@media (max-width: 375px) {
+    nav>ul>li>a {
+        font-size: 12px;
+        line-height: 40px;
     }
 }
