--- a/css/paginaPrincipal.css
+++ b/css/paginaPrincipal.css
@@ -20,7 +20,7 @@
 header {
     width: 100%;
     background-color: #e6e6e6;
-    padding: 2%;
+    padding: 2% 0px;
 }
 
 header>img {
@@ -33,14 +33,17 @@ header>img {
 }
 
 header>h1 {
-    width: 75%;
+    width: 80%;
     margin: 0px auto;
-    padding-top: 0.5%;
+    margin-top: 1%;
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     text-transform: uppercase;
     font-weight: bold;
     text-shadow: 0px 0px 5px rgb(44, 44, 44);
+    background-color: rgba(156, 156, 156, 0.287);
+    border-radius: 25px;
+    box-shadow: 0px 0px 5px black;
 }
 
 
@@ -94,31 +97,43 @@ nav>ul>li>a:hover {
 }
 
 @media (max-width: 414px) {
+    header>img {
+        width: 30%;
+    }
     header>h1 {
-        font-size: 25px;
+        font-size: 35px;
+        border: 0px;
+        border-radius: 0px;
+        box-shadow: 0px 0px 0px black;
+        background-color: rgba(0, 0, 0, 0);
+    }
+    nav {
+        min-height: 206px;
+        background-color: rgba(0, 0, 0, 0);
     }
     nav>ul {
         width: 100%;
-        height: 40px;
     }
     nav>ul>li {
-        width: 24%;
+        background-color: black;
+        float: none;
+        width: 100%;
+        margin: 0px auto;
+        border: 1px solid white;
+        border-bottom: 0px;
     }
     nav>ul>li:first-child {
         display: none;
     }
     nav>ul>li>a {
-        font-size: 14px;
+        font-size: 20px;
         line-height: 40px;
-    }
-    nav>ul>li:nth-child(2) {
-        border-left: 1px solid #ccccccaf;
     }
 }
 
 @media (max-width: 375px) {
     nav>ul>li>a {
-        font-size: 12px;
+        font-size: 18px;
         line-height: 40px;
     }
 }
