--- a/css/paginaPrincipal.css
+++ b/css/paginaPrincipal.css
@@ -1,3 +1,5 @@
+/* Maquetacion general */
+
 @font-face {
     font-family: "Shawdows Into Ligth t";
     src: url("../fuentes/ShadowsIntoLight-Regular.ttf");
@@ -25,6 +27,9 @@ header {
     width: 100%;
     background-color: #d6d6d6;
     padding: 2% 0px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    box-shadow: 0px 0px 4px black inset;
 }
 
 header>img {
@@ -49,10 +54,6 @@ header>h1 {
     border-radius: 25px;
     box-shadow: 0px 0px 5px black;
 }
-
-
-/*Fin del header*/
-
 
 /*Maquetacion del menu*/
 
@@ -109,19 +110,18 @@ nav>ul>li>a:hover {
 
 main,aside{
     padding: 1%;
+    float: left;
 }
 
 main{
     width: 65%;
-    float:left;
 }
 
 aside{
     width: 30%;
-    float: left;
 }
 
-main>section{
+main>section, aside > section{
     width: 100%;
     height: 300px;
     margin-bottom: 2%;
@@ -171,6 +171,12 @@ article > img {
     box-shadow: 0px 0px 6px white;
 }
 
+aside > section{
+    margin-bottom: 4%;
+}
+
+/* Responsive con medias queries */
+
 @media (max-width: 414px) {
     header>img {
         width: 30%;
@@ -203,6 +209,15 @@ article > img {
     nav>ul>li>a {
         font-size: 20px;
         line-height: 40px;
+    }
+
+    main, aside{
+        float: none;
+        width: 100%;
+    }
+
+    aside > section{
+        margin-bottom: 2%;
     }
 }
 
