--- a/css/paginaPrincipal.css
+++ b/css/paginaPrincipal.css
@@ -180,7 +180,7 @@ aside > section{
 
 footer{
     width: 99.5%;
-    height: 100px;
+    height: max-content;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.904);
     border: 1px solid black;
