Corrijo el link del inicio para el responsive2

--- a/css/paginaPrincipal.css
+++ b/css/paginaPrincipal.css
@@ -216,7 +216,7 @@ footer{
         background-color: rgba(0, 0, 0, 0);
     }
     nav {
-        min-height: 206px;
+        min-height: 256px;
         background-color: rgba(0, 0, 0, 0);
     }
     nav>ul {
@@ -229,10 +229,10 @@ footer{
         margin: 0px auto;
         border: 1px solid white;
         border-bottom: 0px;
-    }
+    }/*
     nav>ul>li:first-child {
         display: none;
-    }
+    }*/
     nav>ul>li>a {
         font-size: 20px;
         line-height: 40px;
