--- a/css/contacto.css
+++ b/css/contacto.css
@@ -101,6 +101,216 @@ nav>ul>li>a:hover {
     text-decoration: underline;
 }
 
+/*Maquetacion del contenido central*/
+
+#contenidoCentral{
+    width: 95%;
+    margin: 0px auto;
+}
+
+#contenidoCentral > main > section{
+    width: 100%;
+    height: max-content;
+    background-color:rgb(39, 39, 39);
+    margin-top: 1%;
+    border: 1px solid black;
+    border-radius: 0px 20px 0px 20px;
+    box-shadow: 2px 2px 4px rgb(109, 108, 108);
+}
+
+section > h2{
+    width: 95%;
+    margin: 0px auto;
+    margin-top: 1%;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    background-color: rgba(128, 128, 128, 0.555);
+    box-shadow: 0px 0px 4px black inset;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
+#biografia > article > img,
+#biografia > article > p,
+#biografia > article > #conocimientos{
+    display: block;
+    width: 32%;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 25px;
+    box-shadow: 0px 0px 5px white;
+    margin-right: 1%;
+    height: 400px;
+    float: left;
+}
+
+#biografia > article{
+    display: block;
+    min-height: max-content;
+    margin: 1%;
+    float: none;
+}
+
+#biografia > article > img{
+    margin-left: 1%;
+}
+
+#biografia > article > p{
+    width: 28%;
+    padding: 2%;
+    height: 350px;
+    /*font-family:  sans-serif,Arial, Helvetica;*/
+    font-weight: bold;
+    color: rgb(44, 44, 44);
+    background-color: rgba(255, 255, 255, 0.61);
+    box-shadow: 0px 0px 8px black inset;
+    border-radius: 25px 0px 0px 25px;
+    overflow-y: scroll;
+}
+
+#biografia > article > #conocimientos{
+    margin-right: 0px;
+    background-color: rgba(255, 255, 255, 0.61);
+}
+
+#conocimientos *{
+    display: block;
+}
+
+#conocimientos > p{
+    width: 90%;
+    margin: 0px auto;
+    margin-top: 2%;
+    font-weight: bold;
+    color: rgb(44, 44, 44);
+    background-color: rgba(255, 255, 255, 0.61);
+    box-shadow: 0px 0px 8px black inset;
+    border-radius: 25px;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: underline;
+}
+
+#conocimientos > img{
+    width: 300px;
+    height: 300px;
+    margin: 0px auto;
+    margin-top: 2%;
+    box-shadow: 0px 0px 4px black;
+    animation-name: cambiarLenguaje;
+    animation-duration: 110s;
+    animation-iteration-count: infinite;
+}
+
+.nivel{
+    width: 90%;
+    margin: 0px auto;
+    margin-top: 2%;
+    border: 1px solid black;
+    padding: 1%;
+    border-radius: 25px;
+}
+
+#conocimientos > div > p{
+    width: 20%;
+    border-radius: 25px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    float:left;
+}
+
+.barra{
+    height: 26px;
+    width: 80%;
+    background-color: rgb(247, 230, 230);
+    border-radius: 25px;
+    float:left;
+}
+
+.nivelEnBarra{
+    width: 80%;
+    height: 100%;
+    background-color: cadetblue;
+    border-radius: 25px;
+    animation-name: cambiarNivel;
+    animation-duration: 110s; 
+    animation-iteration-count: infinite;
+}
+
+@keyframes cambiarLenguaje{
+    0%{
+        content: url("../img/c.PNG");
+    }
+    10%{
+        content: url("../img/java.PNG");
+    }
+    20%{
+        content: url("../img/ruby.png");
+    }
+    30%{
+        content: url("../img/cplusplus.png");
+    }
+    40%{
+        content: url("../img/sql.PNG");
+    }
+    50%{
+        content: url("../img/hibernate.jpg");
+    }
+    60%{
+        content:url("../img/html.jpg") ;
+    }
+    70%{
+        content: url("../img/css.png");
+    }
+    80%{
+        content: url("../img/bootstrap.png");
+    }
+    90%{
+        content: url("../img/javascript.png");
+    }
+    100%{
+        content: url("../img/github.png");
+    }
+}
+
+@keyframes cambiarNivel{
+    0%{
+        width: 85%;
+    }
+    10%{
+        width: 80%;
+    }
+    20%{
+        width: 40%;
+    }
+    30%{
+        width: 65%;
+    }
+    40%{
+        width: 45%;
+    }
+    50%{
+        width: 60%;
+    }
+    60%{
+        width: 70%;
+    }
+    70%{
+        width: 75%;
+    }
+    80%{
+        width: 50%;
+    }
+    90%{
+        width: 30%;
+    }
+    100%{
+        width: 65%;
+    }
+}
+
 /* Maquetacion del footer */
 
 footer{
@@ -154,10 +364,7 @@ footer{
         margin: 0px auto;
         border: 1px solid white;
         border-bottom: 0px;
-    }/*
-    nav>ul>li:first-child {
-        display: none;
-    }*/
+    }
     nav>ul>li>a {
         font-size: 20px;
         line-height: 40px;
