--- a/css/herramientas.css
+++ b/css/herramientas.css
@@ -101,6 +101,13 @@ nav>ul>li>a:hover {
     text-decoration: underline;
 }
 
+/*Maquetacion del contenido central*/
+
+#contenidoCentral{
+    width: 95%;
+    margin: 0px auto;
+}
+
 /* Maquetacion del footer */
 
 footer{
@@ -154,10 +161,7 @@ footer{
         margin: 0px auto;
         border: 1px solid white;
         border-bottom: 0px;
-    }/*
-    nav>ul>li:first-child {
-        display: none;
-    }*/
+    }
     nav>ul>li>a {
         font-size: 20px;
         line-height: 40px;
