--- a/css/paginaPrincipal.css
+++ b/css/paginaPrincipal.css
@@ -229,10 +229,7 @@ footer{
         margin: 0px auto;
         border: 1px solid white;
         border-bottom: 0px;
-    }/*
-    nav>ul>li:first-child {
-        display: none;
-    }*/
+    }
     nav>ul>li>a {
         font-size: 20px;
         line-height: 40px;
