--- a/css/contacto.css
+++ b/css/contacto.css
@@ -199,7 +199,7 @@ section > h2{
     margin-top: 2%;
     box-shadow: 0px 0px 4px black;
     animation-name: cambiarLenguaje;
-    animation-duration: 110s;
+    animation-duration: 55s;
     animation-iteration-count: infinite;
 }
 
@@ -213,7 +213,7 @@ section > h2{
 }
 
 #conocimientos > div > p{
-    width: 20%;
+    width: 30%;
     border-radius: 25px;
     text-align: center;
     font-weight: bold;
@@ -223,7 +223,7 @@ section > h2{
 
 .barra{
     height: 26px;
-    width: 80%;
+    width: 70%;
     background-color: rgb(247, 230, 230);
     border-radius: 25px;
     float:left;
@@ -234,9 +234,53 @@ section > h2{
     height: 100%;
     background-color: cadetblue;
     border-radius: 25px;
+    text-align: center;
     animation-name: cambiarNivel;
-    animation-duration: 110s; 
+    animation-duration: 55s; 
     animation-iteration-count: infinite;
+}
+
+#nivelEnPorcentaje::after{
+    content: "";
+    animation-name: cambiarPorcentaje;
+    animation-duration: 55s; 
+    animation-iteration-count: infinite;
+}
+
+@keyframes cambiarPorcentaje{
+    0%{
+        content: "85%";
+    }
+    10%{
+        content: "80%";
+    }
+    20%{
+        content: "40%";
+    }
+    30%{
+        content: "65%";
+    }
+    40%{
+        content: "45%";
+    }
+    50%{
+        content: "60%";
+    }
+    60%{
+        content: "70%";
+    }
+    70%{
+        content: "75%";
+    }
+    80%{
+        content: "50%";
+    }
+    90%{
+        content: "30%";
+    }
+    100%{
+        content: "65%";
+    }
 }
 
 @keyframes cambiarLenguaje{
