--- a/css/contacto.css
+++ b/css/contacto.css
@@ -178,7 +178,9 @@ section > h2{
     display: block;
 }
 
-#conocimientos > p{
+#conocimientos > p,
+#ubicacion > h3,
+#contactoDirecto > h3 {
     width: 90%;
     margin: 0px auto;
     margin-top: 2%;
@@ -354,6 +356,64 @@ section > h2{
         width: 65%;
     }
 }
+
+#ubicacionContacto > article{
+    border:  1px solid white;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.61);
+    margin: 1% 0% 1% 1%;
+    padding: 1.5%;
+    float: left;
+}
+
+#ubicacion{
+    width: 50%;
+}
+
+#ubicacion > h3,
+#contactoDirecto > h3{
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+#iframeUbicacion,
+#contactoInfo{
+    width: 95%;
+    margin: 0% auto;
+    border: 1px solid black;
+    height: 203px;
+    border-radius: 25px;
+    box-shadow: 0px 0px 4px black;
+}
+
+iframe{
+    border-radius: 25px;
+}
+
+#contactoDirecto{
+    width: 40%;
+    height: 250px;
+}
+
+#contactoInfo p{
+    width: 95%;
+    margin: 0% auto;
+    margin-top: 2%;
+    border: 1px solid black;
+    border-radius: 25px;
+    text-align: center;
+    font-weight: bold;
+    box-shadow: 0px 0px 3px black inset;
+}
+
+#contactoInfo > p > a:hover{
+    color:rgba(13, 68, 70, 0.918);
+}
+
+#contactoInfo > p > a{
+    color:black;
+}
+
 
 /* Maquetacion del footer */
 
